objects/Recap__c.object
<CustomObject>
    <fields>
        <fullName>Domain_2_Authorization_Code__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 2 Authorization Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Email_Boxes__c</fullName>
        <label>Domain 2 Email Boxes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_2_MX_Record__c</fullName>
        <label>Domain 2 MX Record</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Password__c</fullName>
        <label>Domain 2 Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Transfer_Email__c</fullName>
        <label>Domain 2 Transfer Email?</label>
        <picklist>
            <controllingField>Domain_2_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_2_Type__c</fullName>
        <label>Domain 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - DNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_2_URL__c</fullName>
        <label>Domain 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Domain_2_Username__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 2 Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Contact_Phone__c</fullName>
        <description>Added back to ensure not break integrations....</description>
        <label>Domain Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recaps (Domain Contact)</relationshipLabel>
        <relationshipName>Recaps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_name2__c</fullName>
        <label>Domain name:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_name3__c</fullName>
        <label>Domain name:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Set_Up__c</fullName>
        <label>Email Set Up:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endorsed__c</fullName>
        <inlineHelpText>Is this an OEM endorsed website or a MOTP/Unendorsed website solution?</inlineHelpText>
        <label>Endorsed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Promo__c</fullName>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Export_Destinations__c</fullName>
        <inlineHelpText>Only available for Powersite and IMP</inlineHelpText>
        <label>Export Destinations (up to 30)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Finance_Hours__c</fullName>
        <label>Finance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Ring_To__c</fullName>
        <inlineHelpText>Ring To Number for Finance.</inlineHelpText>
        <label>Finance Ring To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_DSM__c</fullName>
        <formula>HYPERLINK(
&quot;/&quot; &amp; IF(ISBLANK(Account__r.Corporation__c), IF(ISBLANK(Account__r.Group__c), IF(OR( Account__r.Site_Type__r.Name = &apos;Group&apos;, Account__r.Site_Type__r.Name = &apos;Corporation&apos;),  Account__r.Designated_DSM__c, NULL),  Account__r.Group__r.Designated_DSM__c),  Account__r.Corporation__r.Designated_DSM__c),
IF(ISBLANK(Account__r.Corporation__c), IF(ISBLANK(Account__r.Group__c), IF(OR( Account__r.Site_Type__r.Name = &apos;Group&apos;, Account__r.Site_Type__r.Name = &apos;Corporation&apos;),  Account__r.Designated_DSM__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Designated_DSM__r.LastName, NULL),  Account__r.Group__r.Designated_DSM__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Group__r.Designated_DSM__r.LastName) ,  Account__r.Corporation__r.Designated_DSM__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Corporation__r.Designated_DSM__r.LastName )
)</formula>
        <label>Group DSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interactive_Flash_Showroom__c</fullName>
        <label>Interactive Flash Showroom</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep Existing IFS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internet Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recaps (Internet Manager)</relationshipLabel>
        <relationshipName>Recaps5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Comments__c</fullName>
        <label>Inventory Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact_Phone__c</fullName>
        <formula>Inventory_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recaps (Inventory Contact)</relationshipLabel>
        <relationshipName>Recaps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Notes__c</fullName>
        <label>Inventory Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Set_Up__c</fullName>
        <label>Inventory Set Up</label>
        <picklist>
            <picklistValues>
                <fullName>There are no changes needed to your inventory provider.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Type3rdParty__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Type_DMS__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>Best Practices – Template 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices – Template 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 01 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 02 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 03 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 04 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 05 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 06 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 07 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 08 B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 09B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 10B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 11B Flash Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 11B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 12B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 13B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 14B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 15 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 16 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 17 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 18 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 19 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 20 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 21 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 22 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 23 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 24 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 25 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 26 Wide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Layoutold__c</fullName>
        <label>Layout-old</label>
        <picklist>
            <controllingField>Designold__c</controllingField>
            <picklistValues>
                <fullName>Home Page BMW 1 Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page BMW 2 Inspiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page BMW 3 Intensity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page BMW 4 Precision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page BMW 5 Enthusiast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page BMW 6 Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 2 (no inventory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Home Page Layout 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Cadillac Exclusive 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Kia Endorsed 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Kia Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Kia Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Kia Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Kia Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Hyundai Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Hyundai Enthusiast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Hyundai Hero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Hyundai Hurried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Hyundai Info Seeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page VW Flex Rhine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page VW Flex Danube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page VW Flex Diemel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page VW Flex Elbe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomePage_19_wide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing1_Forms__c</fullName>
        <label>Lead Routing1 Forms</label>
        <picklist>
            <picklistValues>
                <fullName>All Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find It For Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing2_Forms__c</fullName>
        <label>Lead Routing2 Forms</label>
        <picklist>
            <picklistValues>
                <fullName>All Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find It For Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing3_Forms__c</fullName>
        <label>Lead Routing3 Forms</label>
        <picklist>
            <picklistValues>
                <fullName>All Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find It For Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Address1__c</fullName>
        <label>Lead Routing Address1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Address2__c</fullName>
        <label>Lead Routing Address2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Address3__c</fullName>
        <label>Lead Routing Address3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_MT__c</fullName>
        <label>Lead Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Manager Customer Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Lead Routing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Type1__c</fullName>
        <label>Lead Routing Type1</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADF 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XADF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Type2__c</fullName>
        <label>Lead Routing Type2</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADF 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XADF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Type3__c</fullName>
        <label>Lead Routing Type3</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADF 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XADF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_Recap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use to make the Recap record read-only.</inlineHelpText>
        <label>Lock Recap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Source__c</fullName>
        <label>Logo Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_records__c</fullName>
        <label>MX records</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Phone_Number__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Makes_On_Contract__c</fullName>
        <label>Makes On Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Masthead__c</fullName>
        <label>Masthead</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Media_Tracker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Tracker Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recaps (Media Tracker Contact)</relationshipLabel>
        <relationshipName>Recaps4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_of_domain_transition2__c</fullName>
        <label>Method of domain transition:</label>
        <picklist>
            <picklistValues>
                <fullName>IP Repoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNS Repoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_domain_transition3__c</fullName>
        <label>Method of domain transition:</label>
        <picklist>
            <picklistValues>
                <fullName>IP Repoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNS Repoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_domain_transition__c</fullName>
        <label>Method of domain transition:</label>
        <picklist>
            <picklistValues>
                <fullName>IP Repoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNS Repoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Focus_Design__c</fullName>
        <label>Model Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>More_Than_2_Domains__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please attach the necessary information for each additional domain to this Recap.</inlineHelpText>
        <label>More Than 2 Domains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Count__c</fullName>
        <inlineHelpText>For DMS test.</inlineHelpText>
        <label>New Car Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_or_Upgrade__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NotesMXRecord__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_auth_code_user_name_password2__c</fullName>
        <label>Notes (auth code, user name, password)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_auth_code_user_name_password3__c</fullName>
        <label>Notes (auth code, user name, password)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_auth_code_user_name_password__c</fullName>
        <label>Notes (auth code, user name, password)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity__r.ADP_Opportunity_Owner__c, Opportunity__r.ADP_Opportunity_Owner__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.ADP_Opportunity_Owner__r.LastName)</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Brands_Website__c</fullName>
        <label>Other Brands Website</label>
        <type>TextArea</type>
    </fields>
</CustomObject>